// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`contributor statement appends to an existing request template 1`] = `
"Foobar #

---
Lorem ipsum dolor sit amet
"
`;

exports[`contributor statement can exempt users and labels 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v5.4.0
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
  contributorStatement:
    name: Require Contributor Statement
    runs-on: ubuntu-latest
    permissions:
      pull-requests: read
    env:
      PR_BODY: \${{ github.event.pull_request.body }}
      EXPECTED: Lorem ipsum dolor sit amet
      HELP: Contributor statement missing from PR description. Please include the following text in the PR description
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && !(contains(github.event.pull_request.labels.*.name, 'automation') || github.event.pull_request.user.login == 'github-bot[bot]')
    steps:
      - uses: actions/github-script@v6
        with:
          script: |-
            const actual = process.env.PR_BODY.replace(/\\r?\\n/g, "\\n");
            const expected = process.env.EXPECTED.replace(/\\r?\\n/g, "\\n");
            if (!actual.includes(expected)) {
                console.log("%j", actual);
                console.log("%j", expected);
                core.setFailed(\`\${process.env.HELP}: \${expected}\`);
            }
"
`;

exports[`contributor statement creates pull request template 1`] = `
"Fixes #

---
Lorem ipsum dolor sit amet
"
`;

exports[`contributor statement validates pull requests 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v5.4.0
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
  contributorStatement:
    name: Require Contributor Statement
    runs-on: ubuntu-latest
    permissions:
      pull-requests: read
    env:
      PR_BODY: \${{ github.event.pull_request.body }}
      EXPECTED: Lorem ipsum dolor sit amet
      HELP: Contributor statement missing from PR description. Please include the following text in the PR description
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: actions/github-script@v6
        with:
          script: |-
            const actual = process.env.PR_BODY.replace(/\\r?\\n/g, "\\n");
            const expected = process.env.EXPECTED.replace(/\\r?\\n/g, "\\n");
            if (!actual.includes(expected)) {
                console.log("%j", actual);
                console.log("%j", expected);
                core.setFailed(\`\${process.env.HELP}: \${expected}\`);
            }
"
`;

exports[`default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v5.4.0
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
"
`;

exports[`semantic titles configure scopes 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v5.4.0
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          scopes: |-
            cli
            api
          requireScope: false
"
`;

exports[`semantic titles configure types 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v5.4.0
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
          requireScope: false
"
`;

exports[`semantic titles require scope 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v5.4.0
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: true
"
`;
